--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="theme-color" content="#2c94a4">
     <meta name="keywords" content="Saizuo, NoError, CEO, Web Developer, Crypto, Stock Broker, Freelance, Brisbane, Python, Apps, Javascript, Node, Saizuoo, Developer, Front End Developer, Back End Developer">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Saizuo</title>
+    <title>Portfolio</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/style.css.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118887921-1"></script>
-    <script src="js/scripts.min.js" async></script>
+    <script src="js/script.js" async></script>
 </head>
 
 <body>
