--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="clearfix"></div>
                 <div class="app-icon social"><a href="https://github.com/Saizuo" target="_blank" rel="noopener"><i class="fa fa-github fa-2x"></i><span>Github</span></a></div>
                 <div class="clearfix"></div>
-                <div class="app-icon social"><a href="https://www.reddit.com/r/Progammingmood/" target="_blank" rel="noopener"><i class="fa fa-reddit fa-2x"></i><span>Reddit</span></a></div>
+                <div class="app-icon social"><a href="https://www.reddit.com/r/Progammingmood/" target="_blank" rel="noopener"><i class="fa fa-instagram fa-2x"></i><span>Insta</span></a></div>
                 <div class="clearfix"></div>
                 <div class="app-icon social"><a href="https://www.linkedin.com/in/vikas-jha-842b0b219/" target="_blank" rel="noopener"><i class="fa fa-linkedin fa-2x"></i><span>Linkedin</span></a></div>
             </div>
